--- a/motudy/src/main/resources/templates/account/sign-up.html
+++ b/motudy/src/main/resources/templates/account/sign-up.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>모터디 회원가입</title>
-	<!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<style>
 		.container {
 			max-width: 100%;
@@ -52,7 +51,7 @@
 					<input id="nickname" type="text" th:field="*{nickname}" class="form-control"
 						   placeholder="induk" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
 					<small id="nicknameHelp" class="form-text text-muted">
-						공백없이 문자와 숫자를 이용하여 3자 이상 20자 이내로 입력하세요. 가입후에 변경할 수 있습니다.
+						공백없이 문자와 숫자를 이용하여 3자 이상 20자 이내로 입력하세요. 가입 후에 변경할 수 있습니다.
 					</small>
 					<small class="invalid-feedback">닉네임을 입력하세요.</small>
 					<small class="form-text text-danger" th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}">Nickname Error</small>
@@ -82,7 +81,7 @@
 
 				<div class="form-group">
 					<button class="btn btn-primary btn-block" type="submit"
-							aria-describedby="submitHelp">가입하기기</button>
+							aria-describedby="submitHelp">가입하기</button>
 					<small id="submitHelp" class="form-text text-muted">
 						<a href="#">약관</a>에 동의하시면 가입하기 버튼을 클릭하세요.
 					</small>
@@ -96,8 +95,9 @@
 			</div>
 		</footer>
 	</div>
-	<!-- JavaScript Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script type="application/javascript">
 		(function () {
             'use strict';
