--- a/motudy/src/main/resources/templates/account/sign-up.html
+++ b/motudy/src/main/resources/templates/account/sign-up.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="UTF-8">
-	<title>모터디 회원가입</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<style>
-		.container {
-			max-width: 100%;
-		}
-	</style>
-</head>
+
+<head th:replace="fragments.html :: header"></head>
+
 <body class="bg-light">
-	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-		<a class="navbar-brand" href="/" th:href="@{/}">
-			<img src="/images/motudy-logo.png" width="30" height="30"  alt="Motudy"/>
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<form th:action="@{/search/study}" class="form-inline" method="get">
-						<input class="form-control mr-sm-2" name="keyword" type="search" placeholder="스터디 찾기" aria-label="Search" />
-					</form>
-				</li>
-			</ul>
-
-			<ul class="navbar-nav justify-content-end">
-				<li class="nav-item">
-					<a class="nav-link" href="#" th:href="@{/login}">로그인</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#" th:href="@{/sign-up}">회원가입</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
+	<nav th:replace="fragments.html :: main-nav"></nav>
 
 	<div class="container">
 		<div class="py-5 text-center">
@@ -89,11 +56,7 @@
 			</form>
 		</div>
 
-		<footer th:fragment="footer">
-			<div class="row justify-content-center">
-				Motudy &copy;2022
-			</div>
-		</footer>
+		<footer th:replace="fragments.html :: footer"></footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
