--- a/motudy/src/main/resources/templates/account/sign-up.html
+++ b/motudy/src/main/resources/templates/account/sign-up.html
@@ -16,7 +16,7 @@
 				<div class="form-group">
 					<label for="nickname">닉네임</label>
 					<input id="nickname" type="text" th:field="*{nickname}" class="form-control"
-						   placeholder="induk" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
+						   placeholder="Please input Your Nickname" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
 					<small id="nicknameHelp" class="form-text text-muted">
 						공백없이 문자와 숫자를 이용하여 3자 이상 20자 이내로 입력하세요. 가입 후에 변경할 수 있습니다.
 					</small>
@@ -27,7 +27,7 @@
 				<div class="form-group">
 					<label for="email">이메일</label>
 					<input id="email" type="email" th:field="*{email}" class="form-control"
-						   placeholder="your@email.com" aria-describedby="emailHelp" required>
+						   placeholder="Please input Your Email" aria-describedby="emailHelp" required>
 					<small id="emailHelp" class="form-text text-muted">
 						모터디는 사용자의 이메일을 공개하지 않습니다.
 					</small>
@@ -36,7 +36,7 @@
 				</div>
 
 				<div class="form-group">
-					<label for="password">패스워드</label>
+					<label for="password">비밀번호</label>
 					<input id="password" type="password" th:field="*{password}" class="form-control"
 						   aria-describedby="passwordHelp" required minlength="8" maxlength="25">
 					<small id="passwordHelp" class="form-text text-muted">
@@ -58,9 +58,6 @@
 
 		<footer th:replace="fragments.html :: footer"></footer>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script type="application/javascript">
 		(function () {
             'use strict';
