--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -6,6 +6,10 @@
 	<meta charset="UTF-8">
 	<title>모터디</title>
 	<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
+	<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css" />
+	<script src="/node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
 	<style>
         .container {
             max-width: 100%;
@@ -38,15 +42,20 @@
 				<a class="nav-link" href="#" th:href="@{/sign-up}">회원가입</a>
 			</li>
 			<li class="nav-item" sec:authorize="isAuthenticated()">
-				<a class="nav-link" href="#" th:href="@{/notifications}">알림</a>
+				<a class="nav-link" href="#" th:href="@{/notifications}">
+					<i class="fa fa-bell-o" aria-hidden="true"></i>
+				</a>
 			</li>
 			<li class="nav-item" sec:authorize="isAuthenticated()">
-				<a class="nav-link btn btn-outline-primary" href="#" th:href="@{/studygaesul}">스터디 개설</a>
+				<a class="nav-link btn btn-outline-primary" href="#" th:href="@{/studygaesul}">
+					<i class="fa fa-plus" aria-hidden="true"></i> 스터디 개설
+				</a>
 			</li>
 			<li class="nav-item dropdown" sec:authorize="isAuthenticated()">
 				<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
 				   aria-haspopup="true" aria-expanded="false">
-					프로필
+					<svg data-jdenticon-value="user123" th:data-jdenticon-value="${#authentication.name}"
+						 width="24" height="24" class="rounded border bg-light"></svg>
 				</a>
 				<div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
 					<h6 class="dropdown-header">
