--- a/motudy/src/main/resources/templates/index.html
+++ b/motudy/src/main/resources/templates/index.html
@@ -5,8 +5,11 @@
 <head th:replace="fragments.html :: header"></head>
 
 <body class="bg-light">
-
 	<nav th:replace="fragments.html :: main-nav"></nav>
+	<div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
+		모터디 가입을 완료하려면 <a href="#" th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
+	</div>
+
 	<div class="container">
 		<div class="py-5 text-center">
 			<h2>모터디</h2>
@@ -14,7 +17,5 @@
 
 		<footer th:replace="fragments.html :: footer"></footer>
 	</div>
-	<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
