--- a/motudy/src/main/resources/templates/settings/profile.html
+++ b/motudy/src/main/resources/templates/settings/profile.html
@@ -64,13 +64,130 @@
 						</div>
 
 						<div class="form-group">
+							<input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
+						</div>
+
+						<div class="form-group">
 							<button class="btn btn-primary btn-block" type="submit"
 									aria-describedby="submitHelp">수정하기</button>
 						</div>
 					</form>
+					<div class="col-sm-6">
+						<div class="card text-center">
+							<div class="card-header">
+								프로필 이미지
+							</div>
+							<div id="current-profile-image" class="mt-3">
+								<svg th:if="${#strings.isEmpty(profile.profileImage)}" class="rounded"
+									 th:data-jdenticon-value="${account.nickname}" width="125" height="125"></svg>
+								<img th:if="${!#strings.isEmpty(profile.profileImage)}" class="rounded"
+									 th:src="${profile.profileImage}"
+									 width="125" height="125" alt="name" th:alt="${account.nickname}" />
+ 							</div>
+							<div id="new-profile-image" class="mt-3"></div>
+							<div class="card-body">
+								<div class="custom-file">
+									<input type="file" class="custom-file-input" id="profile-image-file">
+									<label class="custom-file-label" for="profile-image-file">프로필 이미지 변경</label>
+								</div>
+								<div id="new-profile-image-control" class="mt-3">
+									<button class="btn btn-outline-primary btn-block" id="cut-button">자르기</button>
+									<button class="btn btn-outline-success btn-block" id="confirm-button">확인</button>
+									<button class="btn btn-outline-warning btn-block" id="reset-button">취소</button>
+								</div>
+								<div id="cropped-new-profile-image" class="mt-3"></div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<link href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet">
+	<script src="/node_modules/cropper/dist/cropper.min.js"></script>
+	<script src="/node_modules/jquery-cropper/dist/jquery-cropper.min.js"></script>
+	<script type="application/javascript">
+		$(function () { // jQuery 실행될 수 있도록 하는 문법
+            cropper = '';
+            let $confirmBtn = $("#confirm-button"); // 확인
+            let $resetBtn = $("#reset-button"); // 취소
+            let $cutBtn = $("#cut-button"); // 잘라내기
+			let $newProfileImage = $("#new-profile-image"); // 새로 선택한 이미지
+            let $currentProfileImage = $("#current-profile-image"); // 현재 이미지
+            let $resultImage = $("#cropped-new-profile-image"); // 잘라낸 영역만을 나타낸 이미지
+            let $profileImage = $("#profileImage"); // 최종적으로 설정해야 할 이미지(form에다가 넣어줘야 할 값)
+
+			// 일단 프로필 이미지 수정을 진행하지 않았으면 숨김
+            $newProfileImage.hide();
+            $cutBtn.hide();
+            $resetBtn.hide();
+            $confirmBtn.hide();
+
+            // "프로필 이미지 변경" [browse] 이게 바뀌면 시작
+            $("#profile-image-file").change(function (e) {
+                // 파일을 하나 선택했으면 읽어옴
+                if(e.target.files.length === 1) {
+                    const reader = new FileReader(); // 파일을 읽어올 수 있는 것
+                    reader.onload = e => {
+                        if(e.target.result) { // 파일을 이미 가져온 상태
+                            // 가져온 이미지를 채워 넣음
+                            let img = document.createElement("img");
+                            img.id = 'new-profile';
+                            img.src = e.target.result;
+                            img.width = 250;
+
+                            $newProfileImage.html(img); // 영역에다가 새로운 이미지 태그 추가
+                            $newProfileImage.show(); // 새로 영역 보여줌
+                            $currentProfileImage.hide(); // 현재 이미지 파일 숨김(새 이미지를 보여줌)
+
+                            let $newImage = $(img); // img를 jQuery로 감쌈
+							// cropper 적용
+                            $newImage.cropper({aspectRatio: 1});
+                            cropper = $newImage.data('cropper');
+
+                            // 잘라내기, 취소 버튼은 보여주고 확인 버튼은 숨김
+                            $cutBtn.show();
+                            $confirmBtn.hide(); // 잘라낸 다음에 써야하기 때문에 숨김
+                            $resetBtn.show();
+						}
+					};
+
+                    // 그 파일을 읽어옴
+                    reader.readAsDataURL(e.target.files[0]);
+				}
+			});
+
+            // 취소 버튼을 클릭하면
+            $resetBtn.click(function () {
+                $currentProfileImage.show();
+                $newProfileImage.hide();
+                $resultImage.hide();
+                $resetBtn.hide();
+                $confirmBtn.hide();
+                $profileImage.val(''); // 최종적으로 세팅해야되는 값을 비어있는 문자열로 다시 세팅함(아무 일도 안 일어나게 됨)
+			});
+
+            // 잘라내기를 수행하면
+            $cutBtn.click(function () {
+                let dataUrl = cropper.getCroppedCanvas().toDataURL();
+                let newImage = document.createElement("img");
+                // 새로 잘라낸 이미지
+				newImage.id = "cropped-new-profile-image";
+                newImage.src = dataUrl;
+                newImage.width = 125;
+                $resultImage.html(newImage);
+                $resultImage.show();
+                $confirmBtn.show(); // 잘라내기를 수행하면 확인 버튼 보여줌
+
+				// 잘라낸 영역 만큼만 profileImage에 세팅
+                $confirmBtn.click(function () {
+                    $newProfileImage.html(newImage);
+                    $cutBtn.hide();
+                    $confirmBtn.hide();
+                    $profileImage.val(dataUrl);
+				});
+			});
+		});
+	</script>
 </body>
 </html>
