--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -54,7 +54,7 @@
 			<li class="nav-item dropdown" sec:authorize="isAuthenticated()">
 				<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
 				   aria-haspopup="true" aria-expanded="false">
-					<svg data-jdenticon-value="user123" data-jdenticon-value="user123"
+					<svg th:if="${#strings.isEmpty(account?.profileImage)}" data-jdenticon-value="user123"
 						 th:data-jdenticon-value="${#authentication.name}" width="24" height="24" class="rounded border bg-light"></svg>
 					<img th:if="${!#strings.isEmpty(account?.profileImage)}" th:src="${account.profileImage}"
 						 width="24" height="24" class="rounded border" />
