--- a/motudy/src/main/resources/templates/settings/password.html
+++ b/motudy/src/main/resources/templates/settings/password.html
@@ -15,6 +15,9 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
+				<div class="row">
+					<h2 class="col-sm-12">패스워드 변경</h2>
+				</div>
 				<div class="row mt-3">
 					<form class="needs-validation col-12" action="#" th:action="@{/settings/password}"
 						  th:object="${passwordForm}" method="post" novalidate min="8" max="25">
@@ -26,10 +29,9 @@
 								새 패스워드를 입력하세요.
 							</small>
 							<small class="invalid-feedback">패스워드를 입력하세요.</small>
-							<small class="form-text text-danger" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}">
-								8자에서 25자 사이로 입력해주세요.
-							</small>
+							<small class="form-text text-danger" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}">New Password Error</small>
 						</div>
+
 						<div class="form-group">
 							<label for="newPasswordConfirm">새 패스워드 확인</label>
 							<input id="newPasswordConfirm" type="password" th:field="*{newPasswordConfirm}" class="form-control"
@@ -38,9 +40,7 @@
 								새 패스워드를 다시 한 번 입력하세요.
 							</small>
 							<small class="invalid-feedback">새 패스워드를 다시 입력하세요.</small>
-							<small class="form-text text-danger" th:if="${#fields.hasErrors('newPasswordConfirm')}" th:errors="*{newPasswordConfirm}">
-								조금 길어요.
-							</small>
+							<small class="form-text text-danger" th:if="${#fields.hasErrors('newPasswordConfirm')}" th:errors="*{newPasswordConfirm}">New Password Confirm Error</small>
 						</div>
 
 						<div class="form-group">
