develop 'forgot password'

--- a/motudy/src/main/resources/templates/account/sign-up.html
+++ b/motudy/src/main/resources/templates/account/sign-up.html
@@ -16,7 +16,7 @@
 				<div class="form-group">
 					<label for="nickname">닉네임</label>
 					<input id="nickname" type="text" th:field="*{nickname}" class="form-control"
-						   placeholder="Please input Your Nickname" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
+						   placeholder="your-nickname" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
 					<small id="nicknameHelp" class="form-text text-muted">
 						공백 없이 문자와 숫자를 이용하여 3자 이상 20자 이내로 입력하세요. 가입 후에 변경할 수 있습니다.
 					</small>
@@ -27,7 +27,7 @@
 				<div class="form-group">
 					<label for="email">이메일</label>
 					<input id="email" type="email" th:field="*{email}" class="form-control"
-						   placeholder="Please Input Your Email" aria-describedby="emailHelp" required>
+						   placeholder="your@email.com" aria-describedby="emailHelp" required>
 					<small id="emailHelp" class="form-text text-muted">
 						모터디는 사용자의 이메일을 공개하지 않습니다.
 					</small>
