--- a/motudy/src/main/resources/templates/login.html
+++ b/motudy/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 				<div class="form-group">
 					<label for="username">이메일 또는 닉네임</label>
 					<input id="username" type="text" name="username" class="form-control"
-						   placeholder="Please Input Your Email" aria-describedby="emailHelp" required>
+						   placeholder="your@email.com" aria-describedby="emailHelp" required>
 					<small id="emailHelp" class="form-text text-muted">
 						가입할 때 사용한 이메일 혹은 닉네임을 입력하세요.
 					</small>
