--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -7,6 +7,7 @@
 	<title>모터디</title>
 	<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
 	<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
 	<script src="/node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
@@ -14,6 +15,11 @@
         .container {
             max-width: 100%;
         }
+		.tagify-outside {
+			border: 0;
+			padding: 0;
+			margin: 0;
+		}
 	</style>
 </head>
 
