--- a/motudy/src/main/resources/templates/settings/tags.html
+++ b/motudy/src/main/resources/templates/settings/tags.html
@@ -18,7 +18,8 @@
 							참여하고 싶은 스터디 주제를 입력해 주세요. 해당 주제의 스터디가 생기면 알림을 받을 수 있습니다. 태그를 입력하고 콤마(,)
 							또는 엔터를 입력하세요.
 						</div>
-						<input id="tags" type="text" name="tags" class="tagify-outside" aria-describedby="tagsHelp" />
+						<input id="tags" type="text" name="tags" th:value="${#strings.listJoin(tags, ',')}"
+							   class="tagify-outside" aria-describedby="tagsHelp" />
 					</div>
 				</div>
 			</div>
@@ -27,7 +28,7 @@
 	<script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
 	<script type="application/javascript" th:inline="javascript">
 		$(function () {
-            var csrfToken = /*[[$_csrf.token}]]*/ null;
+            var csrfToken = /*[[${_csrf.token}]]*/ null;
             var csrfHeader = /*[[${_csrf.headerName}]]*/ null;
             $(document).ajaxSend(function (e, xhr, options) {
                 xhr.setRequestHeader(csrfHeader, csrfToken);
@@ -43,7 +44,7 @@
                         enabled: true,
 						rightKey: true,
 					},
-					contentType: "apllication/json; charset=utf-8",
+					contentType: "application/json; charset=utf-8",
 					method: "POST",
 					url: "/settings/tags" + url,
 					data: JSON.stringify({'tagTitle': tagTitle})
