--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -123,3 +123,13 @@
     	}, false)
     }())
 </script>
+
+<script type="application/javascript" th:inline="javascript" th:fragment="ajax-csrf-header">
+    $(function () {
+        var csrfToken = /*[[${_csrf.token}]]*/ null;
+        var csrfHeader = /*[[${_csrf.headerName}]]*/ null;
+        $(document).ajaxSend(function (e, xhr, options) {
+            xhr.setRequestHeader(csrfHeader, csrfToken);
+        });
+    });
+</script>
