--- a/motudy/src/main/resources/templates/settings/notifications.html
+++ b/motudy/src/main/resources/templates/settings/notifications.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<h2 class="col-12">알림 설정</h2>
 				</div>
-				<div class="row mt-3" th:fragment="profile-form">
+				<div class="row mt-3" >
 					<form class="col-12" action="#" th:action="@{/settings/notifications}" th:object="${notifications}" method="post" novalidate>
 						<div class="alert alert-light" role="alert">
 							<strong><a href="#" th:href="@{/settings/locations}">주요 활동 지역</a>에
