--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -5,9 +5,11 @@
 <head th:fragment="header">
 	<meta charset="UTF-8">
 	<title>모터디</title>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:300,400,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
 	<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
+	<link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.min.css" />
 	<script src="/node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
@@ -20,6 +22,21 @@
 			padding: 0;
 			margin: 0;
 		}
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+
+        body,
+        input,
+        button,
+        select,
+        optgroup,
+        textarea,
+        .tooltip,
+        .popover {
+            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
 	</style>
 </head>
 
@@ -53,7 +70,7 @@
 				</a>
 			</li>
 			<li class="nav-item" sec:authorize="isAuthenticated()">
-				<a class="nav-link btn btn-outline-primary" href="#" th:href="@{/studygaesul}">
+				<a class="nav-link btn btn-outline-primary" href="#" th:href="@{/new-study}">
 					<i class="fa fa-plus" aria-hidden="true"></i> 스터디 개설
 				</a>
 			</li>
