--- a/motudy/src/main/resources/templates/study/settings/zones.html
+++ b/motudy/src/main/resources/templates/study/settings/zones.html
@@ -3,10 +3,13 @@
 <head th:replace="fragments.html :: header"></head>
 <body class="bg-light">
 	<nav th:replace="fragments.html :: main-nav"></nav>
+	<div th:replace="fragments.html :: study-banner"></div>
 	<div class="container">
+		<div th:replace="fragments.html :: study-info"></div>
+		<div th:replace="fragments.html :: study-menu(studyMenu='settings')"></div>
 		<div class="row mt-5 justify-content-center">
 			<div class="col-2">
-				<div th:replace="fragments.html :: settings-menu(currentMenu='zones')"></div>
+				<div th:replace="fragments.html :: study-settings-menu(currentMenu='zones')"></div>
 			</div>
 			<div class="col-8">
 				<div class="row">
@@ -15,7 +18,7 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="alert alert-info" role="alert">
-							주로 스터디를 다닐 수 있는 지역을 등록하세요. 해당 지역에 스터디가 생기면 알림을 받을 수 있습니다.
+							주로 스터디를 하는 지역을 등록하세요.<br/>
 							시스템에 등록된 지역만 선택할 수 있습니다.
 						</div>
 						<div id="whitelist" th:text="${whitelist}" hidden></div>
@@ -25,8 +28,9 @@
 				</div>
 			</div>
 		</div>
+		<div th:replace="fragments.html :: footer"></div>
 	</div>
 	<script th:replace="fragments.html :: ajax-csrf-header"></script>
-	<script th:replace="fragments.html :: update-zones(baseUrl='/settings/zones')"></script>
+	<script th:replace="fragments.html :: update-zones(baseUrl='/study/' + ${study.path} + '/settings/zones')"></script>
 </body>
 </html>
