--- a/motudy/src/main/resources/templates/event/form.html
+++ b/motudy/src/main/resources/templates/event/form.html
@@ -5,11 +5,11 @@
 	<nav th:replace="fragments.html :: main-nav"></nav>
 	<div th:replace="fragments.html :: study-banner"></div>
 	<div class="container">
-		<div class="py-3 text-center">
+		<div class="py-5 text-center">
 			<h2><a th:href="@{'/study/' + ${study.path}}"><span th:text="${study.title}">스터디</span></a> / 새 모임 만들기</h2>
 		</div>
 		<div class="row justify-content-center">
-			<form class="needs-validation col-sm-10" th:action="@{'/study/' + @{study.path} + '/new-event'}"
+			<form class="needs-validation col-sm-10" action="#" th:action="@{'/study/' + ${study.path} + '/new-event'}"
 				  th:object="${eventForm}" method="post" novalidate>
 				<div class="form-group">
 					<label for="title">모임 이름</label>
@@ -65,7 +65,7 @@
 						<small class="form-text text-danger" th:if="${#fields.hasErrors('startDateTime')}" th:errors="*{startDateTime}">Error</small>
 					</div>
 					<div class="form-group col-md-3">
-						<label for="startDateTime">모임 종료 일시</label>
+						<label for="endDateTime">모임 종료 일시</label>
 						<input id="endDateTime" type="datetime-local" th:field="*{endDateTime}" class="form-control"
 							   aria-describedby="endDateTimeHelp" required>
 						<small id="endDateTimeHelp" class="form-text text-muted">
@@ -93,6 +93,7 @@
 		</div>
 		<div th:replace="fragments.html :: footer"></div>
 	</div>
-<script th:replace="fragments.html :: form-validation"
+	<script th:replace="fragments.html :: form-validation"></script>
+	<script th:replace="fragments.html :: editor-script"></script>
 </body>
 </html>
