--- a/motudy/src/main/resources/templates/event/update-form.html
+++ b/motudy/src/main/resources/templates/event/update-form.html
@@ -5,7 +5,8 @@
 	<nav th:replace="fragments.html :: main-nav"></nav>
 	<div th:replace="fragments.html :: study-banner"></div>
 	<div class="container">
-		<div th:replace="fragments.html :: event-form (mode='new', action='/study/' + ${study.path} + '/new-event/')"></div>
+		<div th:replace="fragments.html :: event-form (mode='edit', action='/study/' + ${study.path}
+		+ '/events/' + ${event.id} + '/edit')"></div>
 		<div th:replace="fragments.html :: footer"></div>
 	</div>
 	<script th:replace="fragments.html :: form-validation"></script>
