--- a/motudy/src/main/resources/templates/event/view.html
+++ b/motudy/src/main/resources/templates/event/view.html
@@ -211,25 +211,6 @@
 		</div>
 		<div th:replace="fragments.html :: footer"></div>
 	</div>
-	<script src="/node_modules/moment/min/moment-with-locales.min.js"></script>
-	<script type="application/javascript">
-		$(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-
-            moment.locale('ko');
-            $(".date-time").text(function (index, dateTime) {
-                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLL');
-			});
-            $(".date").text(function (index, dateTime) {
-                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LL');
-			});
-            $(".weekday").text(function (index, dateTime) {
-                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('dddd');
-			});
-            $(".time").text(function (index, dateTime) {
-                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LT');
-			});
-		})
-	</script>
+	<script th:replace="fragments.html :: date-time"></script>
 </body>
 </html>
