Implement search function

--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -12,6 +12,11 @@
 	<link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.min.css" />
 	<script src="/node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script>
+		window.jednticon_config = {
+            replaceMode: "observe"
+		};
+	</script>
 	<script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
 	<style>
         .container {
