--- a/motudy/src/main/resources/templates/study/settings/study.html
+++ b/motudy/src/main/resources/templates/study/settings/study.html
@@ -61,7 +61,7 @@
 					<h5 class="col-sm-12">팀원 모집</h5>
 					<form class="col-sm-12" action="#" th:action="@{'/study/' + ${study.getPath()} + '/settings/recruit/stop'}" method="post" novalidate>
 						<div class="alert alert-primary" role="alert">
-							팀원 모집을 중답합니다.<br/>
+							팀원 모집을 중단합니다.<br/>
 							팀원 충원이 필요할 때 다시 팀원 모집을 시작할 수 있습니다.<br/>
 							팀원 모집 정보는 1시간에 한번만 바꿀 수 있습니다.
 						</div>
