--- a/motudy/src/main/resources/templates/fragments.html
+++ b/motudy/src/main/resources/templates/fragments.html
@@ -28,6 +28,20 @@
 			margin: 0;
 		}
 
+        #study-logo {
+            height: 200px;
+            width: 100%;
+            overflow: hidden;
+            padding: 0;
+            margin: 0;
+        }
+
+        #study-logo img {
+            height: auto;
+            width: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
@@ -41,6 +55,25 @@
         .tooltip,
         .popover {
             font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+
+        table th {
+            font-weight: lighter;
+        }
+
+        mark {
+            padding: 0;
+            background: transparent;
+            background: linear-gradient(to right, #f0ad4e 50%, transparent 50%);
+            background-position: right bottom;
+            background-size: 200% 100%;
+            transition: all .5s ease;
+            color: #fff;
+        }
+
+        mark.animate {
+            background-position: left bottom;
+            color: #000;
         }
 	</style>
 </head>
@@ -519,5 +552,50 @@
 	</div>
 </div>
 
+<ul th:fragment="notification-list (notifications)" class="list-group list-group-flush">
+	<a href="#" th:href="@{${noti.link}}" th:each="noti: ${notifications}"
+	   class="list-group-item list-group-item-action">
+		<div class="d-flex w-100 justify-content-between">
+			<small class="text-muted" th:text="${noti.title}">Notification Title</small>
+			<small class="fromNow text-muted" th:text="${noti.createdDateTime}">3 days ago</small>
+		</div>
+		<p th:text="${noti.message}" class="text-left mb-0 mt-1">message</p>
+	</a>
+</ul>
+
+<div th:fragment="study-list (studyList)" class="col-sm-12">
+	<div class="row">
+		<div class="col-md-4" th:each="study: ${studyPage.getContent()}">
+			<div class="card mb-4 shadow-sm">
+				<img th:src="${study.banner}" class="card-img-top" th:alt="${study.title}">
+				<div class="card-body">
+					<a th:href="@{'/study/' + ${study.path}}" class="text-decoration-none">
+						<h5 class="card-title context" th:text="${study.title}"></h5>
+					</a>
+					<p class="card-text" th:text="${study.shortDescription}">Short description</p>
+					<p class="card-text context">
+									<span th:each="tag: ${study.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
+										<a href="#" th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
+											<i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
+										</a>
+									</span>
+						<span th:each="zones: ${study.zones}" class="font-weight-light text-monospace badge badge-primary mr-3">
+										<a href="#" th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-white">
+											<i class="fa fa-globe"></i> <span th:text="${zone.localNameOfCity}" class="text-white">City</span>
+										</a>
+									</span>
+					</p>
+					<div class="d-flex justify-content-between align-items-center">
+						<small class="text-muted">
+							<i class="fa fa-user-circle"></i>
+							<span th:text="${study.members.size()}"></span>명
+						</small>
+						<small class="text-muted date" th:text="${study.publishedDateTime}">9 mins</small>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 </html>
