--- a/motudy/src/main/resources/templates/search.html
+++ b/motudy/src/main/resources/templates/search.html
@@ -13,45 +13,81 @@
 				<strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디를
 				<span th:text="${studyPage.getTotalElements()}"></span>개 찾았습니다.
 			</p>
+			<div>
+				<button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">
+					검색 결과 정렬 방식
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<a class="dropdown-item" th:classappend="${#strings.equals(sortProperty, 'publishedDateTime')}? active"
+					   th:href="@{'/search/study?sort=publishedDateTime,desc&keyword=' + ${keyword}}">
+						스터디 공개일
+					</a>
+					<a class="dropdown-item" th:classappend="${#strings.equals(sortProperty, 'memberCount')}? active"
+					   th:href="@{'/search/study?sort=memberCount,desc&keyword=' + ${keyword}}">
+						멤버수
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="row justify-content-center">
+			<div th:replace="fragments.html :: study-list (studyList=${studyPage.getContent()})"></div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-sm-10">
-				<div class="row">
-					<div class="col-md-4" th:each="study: ${studyPage.getContent()}">
-						<div class="card mb-4 shadow-sm">
-							<img th:src="${study.banner}" class="context card-img-top" th:alt="${study.title}">
-							<div class="card-body">
-								<a th:href="@{'/study/' + ${study.path}}" class="text-decoration-none">
-									<h5 class="card-title context" th:text="${study.title}"></h5>
-								</a>
-								<p class="card-text" th:text="${study.shortDescription}">Short description</p>
-								<p class="card-text context">
-									<span th:each="tag: ${study.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
-										<a href="#" th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
-											<i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
-										</a>
-									</span>
-									<span th:each="zones: ${study.zones}" class="font-weight-light text-monospace badge badge-primary mr-3">
-										<a href="#" th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-white">
-											<i class="fa fa-globe"></i> <span th:text="${zone.localNameOfCity}" class="text-white">City</span>
-										</a>
-									</span>
-								</p>
-								<div class="d-flex justify-content-between align-items-center">
-									<small class="text-muted">
-										<i class="fa fa-user-circle"></i>
-										<span th:text="${study.members.size()}"></span>명
-									</small>
-									<small class="text-muted date" th:text="${study.publishedDateTime}">9 mins</small>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				<nav aria-label="Page navigation example">
+					<ul class="pagination justify-content-center">
+						<li class="page-item" th:classappend="${!studyPage.hasPrevious()}? disabled">
+							<a class="page-link" herf="#" th:href="@{'/search/study?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${studyPage.getNumber() - 1}}"
+							   tabindex="-1" aria-disabled="true">
+								Previous
+							</a>
+						</li>
+
+						<li class="page-item" th:classappend="${i == studyPage.getNumber()}? active"
+							th:each="i: ${#numbers.sequence(0, studyPage.getTotalPages() - 1)}">
+							<a href="#" th:href="@{'/search/study?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${i}}"
+							   class="page-link" th:text="${i + 1}">1</a>
+						</li>
+
+						<li class="page-item" th:classappend="${!studyPage.hasNext()}? disabled">
+							<a th:href="@{'/search/study?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${studyPage.getNumber() + 1}}"
+							   class="page-link" href="#">
+								Next
+							</a>
+						</li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 	</div>
 	<div th:replace="fragments.html :: footer"></div>
 	<script th:replace="fragments.html :: date-time"></script>
+	<script src="/node_modules/mark.js/dist/jquery.mark.min.js"></script>
+	<script type="application/javascript">
+		$(function (){
+            var mark = function () {
+                // Read the keyword
+				var keyword = $("#keyword").text();
+
+                // Determine selected options
+				var options = {
+                    "each": function (element) {
+                        setTimeout(function () {
+                            $(element).addClass("animate");
+						}, 150);
+					}
+				};
+
+                // Mark the keyword inside the context
+				$(".context").unmark({
+					done: function () {
+                        $(".context").mark(keyword, options);
+					}
+				});
+			};
+            mark();
+		});
+	</script>
 </body>
 </html>
