--- a/motudy/src/main/resources/templates/index.html
+++ b/motudy/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: header"></head>
 <body class="bg-light">
 	<nav th:replace="fragments.html :: main-nav"></nav>
